--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ collaborated with a team to create a scale replica<br>of the Wright Flyer using 
 <strong>Dots Game (Com S 227)<br><span class = "b">-</span></strong>
 created a puzzle matching game using a two-dimensional array and Dot objects
 </p>
-        <img src = "https://github.com/LiamGriffin1776/LiamGriffin1776.github.io/blob/master/img/GameSnip.JPG" id ="imgReplace1"/>
+        <img src = "https://github.com/LiamGriffin1776/LiamGriffin1776.github.io/blob/master/img/GameSnip.JPG?raw=true" id ="imgReplace1"/>
         <div id = "bottomBox">
             </div>
 </div>
