--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ width:100px;
 }
 </style>
 </head>
-<body background  = "file:///C:/Users/Liam/Desktop/purple-grey-background-texture.jpg">
+<body background  = "https://github.com/LiamGriffin1776/LiamGriffin1776.github.io/blob/master/img/purple-grey-background-texture.jpg?raw=true">
     <div id="box">
         <div id = "topBox">
         </div>
