--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@ Projects
 </span>
 collaborated with a team to create a scale replica<br>of the Wright Flyer using SolidWorks
 </p>
-        <img src = "file:///C:/Users/Liam/Desktop/digitization_wright_flyer.jpg" id = "imgReplace"/>
+        <img src = "https://github.com/LiamGriffin1776/LiamGriffin1776.github.io/blob/master/img/digitization_wright_flyer.jpg?raw=true" id = "imgReplace"/>
 <p id = "p1Paragraph">
 <strong>Dots Game (Com S 227)<br><span class = "b">-</span></strong>
 created a puzzle matching game using a two-dimensional array and Dot objects
