--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@ Education
 <p id = "edParagraph">
     <strong>Iowa State University</strong> <br> GPA: 3.13
 </p>
-        <img src = "file:///C:/Users/Liam/Desktop/Iowa_State_University_221167.jpg"id = "imgReplaceIAstate"/>
+        <img src = "https://github.com/LiamGriffin1776/LiamGriffin1776.github.io/blob/master/img/Iowa_State_University_221167.jpg?raw=true"id = "imgReplaceIAstate"/>
         <div id = "line5">
         </div>
 <div id = "pBox">
