--- a/index.html
+++ b/index.html
@@ -341,30 +341,30 @@ width:100px;
 
 #imgReplaceIAstate {
     position:absolute;
-    width:100px;
-    height: 100px;
+    width:65px;
+    height: 65px;
     right: 12.5%;
-    top: 53.5%;
+    top: 47.5%;
 }
 
 #imgReplace {
     position: absolute;
-    height: 120px;
-    width: 450px;
+    height: 80px;
+    width: 400px;
     right: 22.5%;
-    bottom: 17%;
+    bottom: 16.5%;
     border-color:rgb(74,72,72);
 }
 
 #imgReplace1 {
     position: absolute;
-    height: 150px;
-    width: 450px;
+    height: 75px;
+    width: 350px;
     right: 30%;
-    bottom: 0.75%;
+    bottom: 3%;
     border-color: rgb(74,72,72);
-    
 }
+  
 </style>
 </head>
 <body background  = "http://www.publicdomainpictures.net/pictures/100000/velka/purple-grey-background-texture.jpg">
@@ -427,6 +427,7 @@ Education
 <p id = "edParagraph">
     <strong>Iowa State University</strong> <br> GPA: 3.13
 </p>
+      <img id = "imgReplaceIAstate" src = "https://github.com/LiamGriffin1776/LiamGriffin1776.github.io/blob/master/img/Iowa_State_University_221167.jpg?raw=true"/>
         <div id = "line5">
         </div>
 <div id = "pBox">
@@ -451,11 +452,13 @@ Projects
 </span>
 collaborated with a team to create a scale replica<br>of the Wright Flyer using SolidWorks
 </p>
+      <img id = "imgReplace" src = "https://github.com/LiamGriffin1776/LiamGriffin1776.github.io/blob/master/img/digitization_wright_flyer.jpg?raw=true"/>
 
 <p id = "p1Paragraph">
 <strong>Dots Game (Com S 227)<br><span class = "b">-</span></strong>
 created a puzzle matching game using a two-dimensional array and Dot objects
 </p>
+          <img id = "imgReplace1" src = "https://github.com/LiamGriffin1776/LiamGriffin1776.github.io/blob/master/img/GameSnip.JPG?raw=true"/>
 
         <div id = "bottomBox">
             </div>
