--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ Projects
       <strong>Aerospace Engineering 161 Final Project </strong><br>
       <span class="b">
 <strong>-</strong>
-</span> collaborated with a team to create a scale replica<br>of the Wright Flyer using SolidWorks
+</span> collaborated with a team to create a scale replica of the Wright Flyer using SolidWorks
     </p>
     <img id="imgReplace" src="https://github.com/LiamGriffin1776/LiamGriffin1776.github.io/blob/master/img/digitization_wright_flyer.jpg?raw=true" />
 
